# matrix

./: CMakeLists.txt  Dimension_Type.cc  Dimension_Type.hpp  Matrix  Matrix.Details.cc  Matrix.Details.hpp  Matrix.Iterator.cc  Matrix.Iterator.hpp  Matrix.cc  Matrix.hpp  Matrix_Copy_Policy.hpp  Matrix_Data.cc  Matrix_Data.hpp  Matrix_Data_Allocator.cc  Matrix_Data_Allocator.hpp  Matrix_Order_Policy.cc  Matrix_Order_Policy.hpp  Matrix_Padding_Policy.hpp  matrix_buffer_memory_manager.h
test/: test.matrix.cc  test.matrix.iterator.cc
